# pvr.vuplus

./: CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.vuplus/: addon.xml
src/: VuData.cpp  VuData.h  client.cpp  client.h
